--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "got": "^11.8.0",
-    "valid-url": "^1.0.9"
+    "got": "^11.8.2"
   }
 }
