--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "requestpractise",
+  "name": "requestspractise",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple repository in node.js to get started with requests and Express.js",
   "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "got": "^11.8.2"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/etaaa/RequestPractise.git"
+    "url": "git+https://github.com/etaaa/RequestsPractise.git"
   },
-  "author": "Gabriel (eta)",
+  "author": "eta aka Gabriel",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/etaaa/RequestPractise/issues"
+    "url": "https://github.com/etaaa/RequestsPractise/issues"
   },
-  "homepage": "https://github.com/etaaa/RequestPractise#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "got": "^11.8.2"
-  }
+  "homepage": "https://github.com/etaaa/RequestsPractise#readme"
 }
